fix: applications modal alignment & label details (#193)

--- a/ui/src/components/Modal/modal.scss
+++ b/ui/src/components/Modal/modal.scss
@@ -5,8 +5,8 @@ $padding: 30px;
 .modal-outer-wrapper {
     position: absolute;
     top: 0;
-    left: 0;
-    width: 100%;
+    left: $side-bar-width;
+    width: calc(100% - #{$side-bar-width});
     height: 100%;
     background-color: rgba($color-grey-black, 0.8);
 
